--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="mb-4">
                 <label class="block text-gray-700 text-sm font-bold mb-2" for="Servicio1">
-                    Tipo de Trabajo Requerido.
+                    Tipo de Trabajador Requerido.
                 </label>                  
                     <select name="Servicio1" id="Servicio1"onchange="carg(this);" 
                     class="shadow border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" > 
